新增公共线程池

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
     druid:
       username: root
       password: root
-      url: jdbc:mysql://localhost:3306/jiastore?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/jia-store?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
       driver-class-name: com.mysql.cj.jdbc.Driver
       initial-size: 10
       max-active: 50
@@ -45,3 +45,6 @@ logging:
     root: warn
     com.roubao: info
   config: classpath:logback-config.xml
+token:
+  cache:
+    expire-after-access: 10
