--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 spring:
   cache:
-    type: caffeine
+    type: redis
   datasource:
     druid:
       username: root
       password: root
-      url: jdbc:mysql://localhost:3306/jia-store?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/jiastore?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
       driver-class-name: com.mysql.cj.jdbc.Driver
       initial-size: 10
       max-active: 50
@@ -27,6 +27,12 @@ spring:
           starttls:
             enabled: true # 启用SMTP认证
             required: true # 必须采用加密链接
+  data:
+    redis:
+      port: 6379
+      host: 192.168.2.198
+      database: 15
+      password: redispw
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
