新增事务助手工具类

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     druid:
       username: root
       password: root
-      url: jdbc:mysql://localhost:3306/jiastore?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/jia-store?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
       driver-class-name: com.mysql.cj.jdbc.Driver
       initial-size: 10
       max-active: 50
@@ -30,9 +30,8 @@ spring:
   data:
     redis:
       port: 6379
-      host: 192.168.2.198
+      host: localhost
       database: 15
-      password: redispw
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
@@ -62,10 +61,5 @@ logging:
     root: warn
     com.roubao: info
   config: classpath:logback-config.xml
-cache:
-  token:
-    expire-after-access: 100000
-  sms:
-    expire-after-write: 60
 
 
