--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -30,9 +30,9 @@ spring:
   data:
     redis:
       port: 6379
-      host: 192.168.2.198
+      host: localhost
       database: 15
-      password: redispw
+#      password: redispw
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
